# CVM_-

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  report.md  test.cvm
examples/: calculator.cvm  control_flow.cvm  fibonacci.cvm  functions.cvm  hello_world.cvm  logical.cvm  recursion.cvm  scopes.cvm  strings.cvm  truth_machine.cvm  variables.cvm
src/: main.cpp
src/ast/: ast.cpp  ast.h
src/common/: pipeline.cpp  pipeline.h  value.h
src/compiler/: chunk.h  compiler.cpp  compiler.h  opcode.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: parser.cpp  parser.h
src/repl/: repl.cpp  repl.h
src/vm/: vm.cpp  vm.h
